# google-patent-cli

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE.md  README.md  flake.nix  install.ps1  install.sh  mise.toml  rustfmt.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: examiner.md  researcher.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
agents/pr-healer/: commit-and-push.sh  prompt.txt
agents/pr-healer/tools/: load-progress.sh  record-progress.sh
agents/skill-bench/: runner.sh
agents/skill-bench/cases/patent-assignee-check/: functional-with-country.toml  functional.toml  return-value-check.toml  single-company-name.toml  triggering.toml
agents/skill-bench/cases/patent-fetch/: functional-data-return.toml  functional-raw.toml  functional.toml  triggering.toml
agents/skill-bench/cases/patent-search/: functional-assignee.toml  functional-filing.toml  functional-priority.toml  functional-publication.toml  functional.toml  triggering.toml
agents/skill-bench/tools/: check-assignee-is-array.sh  check-mcp-invoked.sh  check-mcp-loaded.sh  check-mcp-success.sh  check-output-contains.sh  check-output-file.sh  check-output-not-contains.sh  check-param.sh  check-skill-invoked.sh  check-skill-loaded.sh  check-workspace.sh
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/patent-assignee-check/: SKILL.md
claude-plugin/skills/patent-fetch/: SKILL.md
claude-plugin/skills/patent-search/: SKILL.md
docs/: chromium-freeze-investigation.md
e2e/: cli.rs  mcp.rs
scripts/: build.sh  setup.sh  up.sh
src/: config.rs  lib.rs  main.rs  models.rs  patent_search.rs
src/cdp/: browser.rs  connection.rs  mod.rs  page.rs
src/cli/: mod.rs
src/core/: config.rs  error.rs  mod.rs  models.rs  patent_search.rs
src/core/cdp/: browser.rs  connection.rs  mod.rs  page.rs
src/core/scripts/: click_cpcs_tab.js  extract_cpcs.js  extract_patent.js  extract_search_results.js  stealth.js
src/mcp/: cypher.rs  mod.rs
src/scripts/: extract_patent.js  extract_search_results.js
tests/patent-assignee-check/: functional-with-country.toml  functional.toml  triggering.toml
tests/patent-fetch/: functional-data-return.toml  functional.toml  triggering.toml
tests/patent-search/: functional-empty.toml  functional-filing.toml  functional-priority.toml  functional-publication.toml  functional.toml  triggering.toml
