[package]
name = "google-patent-cli"
version = "0.1.1"
edition = "2021"
rust-version = "1.81"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
panic = "unwind"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
futures = "0.3"
toml = "0.9.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
uuid = { version = "1.18.1", features = ["v4"] }
mcp-sdk-rs = "0.3.4"
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[test]]
name = "e2e_cli"
path = "e2e/cli.rs"

[[test]]
name = "e2e_mcp"
path = "e2e/mcp.rs"
